--- a/site/templates/twig/code-tables/mpm/dcm/js/classes/Requests.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/js/classes/Requests.js.twig
@@ -18,7 +18,7 @@ class DcmRequests {
 	}
 
 	getCode(code, callback) {
-		var ajax = new AjaxRequest('{{ page.jsonApiUrl('mpm/dcm/pr-workcenter/') }}');
+		var ajax = new AjaxRequest('{{ page.jsonApiUrl('mpm/dcm/code/') }}');
 
 		ajax.setData({code: code});
 		ajax.request(function(response) {
@@ -27,6 +27,6 @@ class DcmRequests {
 	}
 
 	validateCodeUrl() {
-		return '{{ page.jsonApiUrl('mpm/validate/dcm/pr-workcenter/') }}';
+		return '{{ page.jsonApiUrl('mpm/validate/dcm/code/') }}';
 	}
 }
