--- a/site/templates/twig/code-tables/mpm/dcm/.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/.js.twig
@@ -45,6 +45,7 @@ $(function() {
 						if (editCode) {
 							server.getCode(code, function(response) {
 								if (response) {
+									modal.find('.modal-title').text('Edit Code ' + code);
 									formCode.updateInputsFromJson(response);
 								}
 							});
@@ -113,6 +114,7 @@ $(function() {
 							if (editCode) {
 								server.getCode(code, function(response) {
 									if (response) {
+										modal.find('.modal-title').text('Edit Code ' + code);
 										formCode.updateInputsFromJson(response);
 									}
 								});
