--- a/site/templates/twig/code-tables/mpm/rcm/form.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/form.twig
@@ -19,6 +19,35 @@
 		<input type="text" name="description" class="form-control" maxlength="{{ rcm.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
+	<div class="form-group">
+		<label for="workcenterid">Description</label>
+		{% include 'util/bootstrap/form/input-group.twig' with {
+				'inputgroup': {
+					'type': 'prepend',
+					'input': {
+						'name': 'workcenterid',
+						'value': '',
+						'attributes': {
+							'placeholder': '',
+							'aria-label':  'Work Center'
+						}
+					},
+					'button': {
+						'colorclass': 'btn-secondary',
+						'text': 'fa fa-search'|icon,
+						'attributes': {
+							'title': 'Search Work Centers',
+							'data-toggle': 'modal',
+							'data-target': '#ajax-modal',
+							'data-lookupurl': page.searchLookupUrl('mpm/dcm/codes/'),
+							'data-input': '#workcenterid'
+						}
+					}
+				}
+			}
+		%}
+	</div>
+
 	<div class="d-flex justify-content-between align-items-center">
 		<button type="submit" class="btn btn-success form_button">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
