--- a/site/templates/twig/code-tables/mpm/rcm/js/classes/Inputs.js.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/js/classes/Inputs.js.twig
@@ -13,5 +13,6 @@ class RcmInputs {
 		this.form          = $('#' + this.id),
 		this.code          = this.form.find('input[name=code]');
 		this.description   = this.form.find('input[name=description]');
+		this.workcenterid  = this.form.find('input[name=workcenterid]');
 	}
 }
