--- a/site/templates/twig/code-tables/edit-modal.twig
+++ b/site/templates/twig/code-tables/edit-modal.twig
@@ -10,6 +10,7 @@
 			</div>
 			<div class="modal-body">
 				{% block form %}
+					{% include 'code-tables/form.twig' %}
 				{% endblock %}
 			</div>
 		</div>
