--- a/site/templates/twig/code-tables/mpm/rcm/form.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/form.twig
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="form-group">
-		<label for="workcenterid">Description</label>
+		<label for="workcenterid">Work Center</label>
 		{% include 'util/bootstrap/form/input-group.twig' with {
 				'inputgroup': {
 					'type': 'prepend',
