--- a/site/templates/twig/code-tables/mgl/dtm/js/classes/Inputs.js.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/js/classes/Inputs.js.twig
@@ -64,7 +64,7 @@ class DtmInputs {
 				total += parseFloat(input.val());
 			}
 		});
-		return total <= 100;
+		return total == 100;
 	}
 
 	getGlPctTotal() {
