--- a/site/templates/twig/code-tables/mpm/rcm/form.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/form.twig
@@ -29,7 +29,8 @@
 						'value': '',
 						'attributes': {
 							'placeholder': '',
-							'aria-label':  'Work Center'
+							'aria-label':  'Work Center',
+							'data-jqv': 'true'
 						}
 					},
 					'button': {
@@ -39,13 +40,14 @@
 							'title': 'Search Work Centers',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.searchLookupUrl('mpm/dcm/codes/'),
+							'data-lookupurl': page.searchLookupUrl('mpm/dcm/codes'),
 							'data-input': '#workcenterid'
 						}
 					}
 				}
 			}
 		%}
+		<p class="form-text text-muted work-center description"></p>
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
