--- a/site/templates/twig/code-tables/mpm/rcm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/js/classes/Form.js.twig
@@ -16,12 +16,14 @@ class RcmForm {
 	}
 
 	updateInputsFromJson(json = null) {
+		console.log(json);
 		if (json) {
 			this.inputs.form.attr('data-code', json.code);
 			this.inputs.code.val(json.code);
 			this.inputs.code.attr('readonly', 'true');
 			this.inputs.description.val(json.description);
 			this.inputs.workcenterid.val(json.workcenterid);
+			this.inputs.workcenterdesc.text(json.workcenter.description);
 			var validator = this.inputs.form.validate();
 			validator.element('#' + this.inputs.code.attr('id'));
 			return true;
@@ -30,5 +32,7 @@ class RcmForm {
 		this.inputs.code.val('');
 		this.inputs.code.removeAttr('readonly');
 		this.inputs.description.val('');
+		this.inputs.workcenterid.val('');
+		this.inputs.workcenterdesc.text('');
 	}
 }
