--- a/site/templates/twig/dplus-menu/function-menu.twig
+++ b/site/templates/twig/dplus-menu/function-menu.twig
@@ -1,13 +1,25 @@
+{% set values      = input.get %}
+{% set segments    = input.urlSegments() %}
+{% set lastsegment = segments[segments|length] %}
+
 {% include 'dplus-menu/menu-search-form.twig' with {'page': pages.get('/')} %}
 
 <div class="mb-3">
 	{% if page.parent().template == 'dplus-menu' or page.parent().template == 'warehouse-menu' %}
-	<a href="{{ page.parent().url }}" class="btn btn-primary">
-		<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
-		Back to {{ page.parent().title }}
-	</a>
+		<a href="{{ page.parent().url }}" class="btn btn-primary">
+			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
+			Back to {{ page.parent().title }}
+		</a>
+	{% endif %}
+
+	{% if segments|length %}
+		<a href="{{ page.url }}" class="btn btn-primary">
+			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
+			Back to {{ page.dplus_function ? page.dplus_function|upper : page.title }}
+		</a>
 	{% endif %}
 </div>
+
 <div class="list-group dplus-menu">
 	{% for key, function  in functions %}
 		<a href="{{ page.subfunctionUrl(key) }}" class="list-group-item list-group-item-action">
