--- a/site/templates/twig/msa/noce/js.twig
+++ b/site/templates/twig/msa/noce/js.twig
@@ -8,15 +8,10 @@ $(function() {
 	var modal_notes = $('#notes-modal');
 	var form_notes = modal_notes.find('form');
 	var input_id   = form_notes.find('input[name=id]');
-	var ids = {{ qnotes.get_notes_ids()|json_encode()|raw }};
 
 /* =============================================================
 	Validation Functions
 ============================================================= */
-	jQuery.validator.addMethod("id", function(value, element) {
-		return this.optional(element) || validate_id();
-	}, "Code already exists");
-
 	var validator = form_notes.validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
@@ -27,12 +22,10 @@ $(function() {
 		rules: {
 			id: {
 				required: true,
-				id: true,
-				maxlength: {{ qnotes.get_max_length_code() }},
+				maxlength: {{ qnotes.fieldAttribute('code', 'maxlength') }},
 			 },
 			note: { required: true },
 		},
-		messages: { note: "Please Enter a Note",},
 		submitHandler: function(form) {
 			var action = $(this.submitButton).attr("value");
 			var jform = $(form);
@@ -66,18 +59,6 @@ $(function() {
 			}
 		}
 	});
-
-	function validate_id() {
-		var id_input = input_id.val();
-		var id_edit  = input_id.attr('data-id');
-
-		if (ids.contains(id_input)) {
-			if (id_input != id_edit) {
-				return false;
-			}
-		}
-		return true;
-	}
 
 /* =============================================================
 	Event Functions
