--- a/site/templates/twig/code-tables/mgl/dtm/form.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/form.twig
@@ -36,7 +36,8 @@
 								],
 								'attributes': {
 									'placeholder': '',
-									'aria-label':  'GL Account ' ~ i
+									'aria-label':  'GL Account ' ~ i,
+									'data-jqv': 'true'
 								}
 							},
 							'button': {
