--- a/site/templates/twig/msa/noce/form.twig
+++ b/site/templates/twig/msa/noce/form.twig
@@ -1,7 +1,7 @@
-<form action="{{ input.url() }}" method="post" id="notes-form">
+<form action="{{ input.url() }}" method="post" id="notes-form" data-code="">
 	<div class="form-group">
-		<label for="id">Code</label>
-		<input type="text" class="form-control w-auto" name="id" id="id" maxlength="{{ qnotes.fieldAttribute('code', 'maxlength') }}" data-id="">
+		<label for="code">Code</label>
+		<input type="text" class="form-control w-auto" name="code" id="code" maxlength="{{ qnotes.fieldAttribute('code', 'maxlength') }}" data-id="">
 	</div>
 	<div class="form-group">
 		<label for="note">Note</label>
