--- a/site/templates/twig/msa/noce/.js.twig
+++ b/site/templates/twig/msa/noce/.js.twig
@@ -3,32 +3,34 @@
 $(function() {
 	var server   = NoceRequests.getInstance();
 	var alert    = NoceAlerts.getInstance();
-	var formCode = NoceForm.getInstance();
+	var formNote = NoceForm.getInstance();
 
 /* =============================================================
 	Event Functions
 ============================================================= */
-// 	$('#edit-code-modal').on('show.bs.modal', function (event) {
+	$('#notes-modal').on('show.bs.modal', function (event) {
+		var button = $(event.relatedTarget); // Button that triggered the modal
+		var modal  = $(this);
+		var id     = button.data('code');
+
+		modal.find('.modal-title').text('Add Note');
+
+		if (id) {
+			modal.attr('data-code', id);
+			modal.find('.modal-title').text('Edit Note ' + id);
+		}
+		formNote.updateInputsFromId(id);
+	});
+//
+// 	$('#notes-modal').on('shown.bs.modal', function (event) {
 // 		var button = $(event.relatedTarget); // Button that triggered the modal
 // 		var modal  = $(this);
 // 		var code   = button.data('code');
-// 		if (code) {
-// 			modal.find('.modal-title').text('Edit Code ' + code);
-// 		} else {
-// 			modal.find('.modal-title').text('Add Code');
-// 		}
-// 		formCode.updateInputsFromJson(button.data('json'));
-// 	});
-//
-// 	$('#edit-code-modal').on('shown.bs.modal', function (event) {
-// 		var button = $(event.relatedTarget); // Button that triggered the modal
-// 		var modal  = $(this);
-// 		var code   = button.data('code');
 //
 // 		if (code) {
-// 			formCode.inputs.description.focus();
+// 			formNote.inputs.description.focus();
 // 		} else {
-// 			formCode.inputs.code.focus();
+// 			formNote.inputs.code.focus();
 // 		}
 // 	});
 //
@@ -46,7 +48,7 @@ $(function() {
 // 							server.getCode(code, function(response) {
 // 								if (response) {
 // 									modal.find('.modal-title').text('Edit Code ' + code);
-// 									formCode.updateInputsFromJson(response);
+// 									formNote.updateInputsFromJson(response);
 // 								}
 // 							});
 // 						} else {
@@ -59,82 +61,79 @@ $(function() {
 // 	});
 //
 // 	$("body").on("focusin", "#code-form input:not(input[name=code])", function(e) {
-// 		if (formCode.inputs.code.val() == '') {
-// 			formCode.inputs.code.focus();
+// 		if (formNote.inputs.code.val() == '') {
+// 			formNote.inputs.code.focus();
 // 		}
 // 	});
 //
-// /* =============================================================
-// 	Validation Functions
-// ============================================================= */
-// 	var validator = formCode.form.validate({
-// 		errorClass: "is-invalid",
-// 		validClass: "is-valid",
-// 		errorPlacement: function(error, element) {
-// 			error.insertAfter(element).addClass('invalid-feedback');
-// 		},
-// 		rules: {
-// 			code: {
-// 				required: true,
-// 				maxlength: formCode.config.fields.code.maxlength,
-// 				remote: {
-// 					url: '{{ page.jsonApiUrl('mpr/validate/src/code/') }}',
-// 					type: "get",
-// 					data: {
-// 						jqv: 'true',
-// 						new: function() {
-// 							return formCode.inputs.form.attr('data-code') == $('#code').val() ? 'false' : 'true';
-// 						},
-// 					}
-// 				}
-// 			},
-// 			description: {
-// 				maxlength: formCode.config.fields.description.maxlength,
-// 			}
-// 		},
-// 		submitHandler: function(form) {
-// 			var formCode = NoceForm.getInstance();
-// 			var server   = NoceRequests.getInstance();
-// 			var code = formCode.inputs.code.val();
-//
-// 			if (formCode.inputs.form.attr('data-code') == code) {
-// 				form.submit();
-// 			} else {
-// 				server.validateCode(code, function(exists) {
-// 					var alert = NoceAlerts.getInstance();
-// 					if (exists === false) {
-// 						form.submit();
-// 						return true;
-// 					}
-//
-// 					alert.codeExists(code, function(editCode) {
-// 						if (editCode) {
-// 							var modal = formCode.form.closest('.modal');
-//
-// 							if (editCode) {
-// 								server.getCode(code, function(response) {
-// 									if (response) {
-// 										modal.find('.modal-title').text('Edit Code ' + code);
-// 										formCode.updateInputsFromJson(response);
-// 									}
-// 								});
-// 							} else {
-// 								modal.modal('hide');
-// 							}
-// 						} else {
-// 							form.submit();
-// 						}
-// 					});
-// 				});
-// 			}
-// 		}
-// 	});
+/* =============================================================
+	Validation Functions
+============================================================= */
+	var validator = formNote.form.validate({
+		errorClass: "is-invalid",
+		validClass: "is-valid",
+		errorPlacement: function(error, element) {
+			error.insertAfter(element).addClass('invalid-feedback');
+		},
+		rules: {
+			code: {
+				required: true,
+				maxlength: formNote.config.fields.code.maxlength,
+				remote: {
+					url: '{{ page.jsonApiUrl('msa/validate/noce/') }}',
+					type: "get",
+					data: {
+						jqv: 'true',
+						new: function() {
+							return formNote.inputs.form.attr('data-code') == $('#code').val() ? 'false' : 'true';
+						},
+					}
+				}
+			},
+		},
+		submitHandler: function(form) {
+			var formNote = NoceForm.getInstance();
+			var server   = NoceRequests.getInstance();
+			var code     = formNote.inputs.code.val();
+
+			// if (formNote.inputs.form.attr('data-code') == code) {
+			// 	form.submit();
+			// } else {
+			// 	server.validateCode(code, function(exists) {
+			// 		var alert = NoceAlerts.getInstance();
+			// 		if (exists === false) {
+			// 			form.submit();
+			// 			return true;
+			// 		}
+			//
+			// 		alert.codeExists(code, function(editCode) {
+			// 			if (editCode) {
+			// 				var modal = formNote.form.closest('.modal');
+			//
+			// 				if (editCode) {
+			// 					server.getCode(code, function(response) {
+			// 						if (response) {
+			// 							modal.find('.modal-title').text('Edit Code ' + code);
+			// 							formNote.updateInputsFromJson(response);
+			// 						}
+			// 					});
+			// 				} else {
+			// 					modal.modal('hide');
+			// 				}
+			// 			} else {
+			// 				form.submit();
+			// 			}
+			// 		});
+			// 	});
+			// }
+		}
+	});
 //
 // /* =============================================================
 // 	Form Functions
 // ============================================================= */
-// 	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
-// 		var form = formCode.inputs.form;
+// 	$("#notes-modal").on('hidden.bs.modal', function (e) {
+// 		var form = formNote.inputs.form;
 // 		form.validate().resetForm();
 // 		form.find('.is-invalid').removeClass("is-invalid");
 // 		form.find('.is-valid').removeClass("is-valid");
