--- a/site/templates/twig/msa/noce/js/classes/Form.js.twig
+++ b/site/templates/twig/msa/noce/js/classes/Form.js.twig
@@ -15,16 +15,37 @@ class NoceForm {
 		this.config = NoceConfigs.getInstance();
 	}
 
-	updateInputsFromId(id) {
+	setupFormAdd() {
+		var modal  = this.form.closest('.modal');
+		var inputs = this.inputs;
+		modal.find('.modal-title').text('Add Note');
+		inputs.form.attr('data-code', '');
+		inputs.code.val('');
+		inputs.code.removeAttr('readonly');
+		inputs.note.val('');
+	}
+
+	setupFormEdit(id) {
+		var modal  = this.form.closest('.modal');
+		var inputs = this.inputs;
+		modal.find('.modal-title').text('Edit Note ' + id);
+		this.updateFormFromId(id);
+	}
+
+	updateFormFromId(id) {
 		var inputs = this.inputs;
 		inputs.code.val(id);
-		// this.inputs.code.change();
-		var server = NoceRequests.getInstance();
-		server.getNotes(id, function(notes) {
-			if (notes) {
-				inputs.code.attr('readonly', 'true');
-				inputs.note.val(notes.note);
-			}
-		});
+		inputs.form.attr('data-code', id);
+
+		var validator = this.form.validate();
+		if (validator.element('#'+inputs.code.attr('id'))) {
+			var server = NoceRequests.getInstance();
+			server.getNotes(id, function(notes) {
+				if (notes) {
+					inputs.code.attr('readonly', 'true');
+					inputs.note.val(notes.note);
+				}
+			});
+		}
 	}
 }
