--- a/site/templates/twig/msa/noce/list.twig
+++ b/site/templates/twig/msa/noce/list.twig
@@ -5,7 +5,7 @@
 	qnotes                 Dplus\qnotes\Noce
 	notes                  NotePreDefined[]|ObjectCollection
 #}
-<div class="list-group codes-list">
+<div class="list-group notes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
 			<div class="col-sm-2">
@@ -17,14 +17,14 @@
 			<div class="col-sm-4 text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-sm btn-light" data-toggle="modal" data-target="#notes-modal" data-code="" data-description="">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+						<i class="fa fa-plus" aria-hidden="true"></i> Add Note
 					</button>
 				{% endif %}
 			</div>
 		</div>
 	</div>
 	{% for note in notes %}
-		<div class="list-group-item code pb-1 pt-1 {{ (response.key == note.id and response.has_success() ) ? 'bg-success text-white' : ''}}" id="code-{{ note.id|attrJS }}" data-code="{{ note.id }}">
+		<div class="list-group-item code pb-1 pt-1 {{ (response.key == note.id and response.hasSuccess() ) ? 'bg-success text-white' : ''}}" id="note-{{ note.id|attrJS }}" data-code="{{ note.id }}">
 			<div class="row align-items-center">
 				<div class="col-sm-2">
 					{{ note.id }}
@@ -58,3 +58,5 @@
 		</div>
 	{% endfor %}
 </div>
+
+{% include 'util/paginator/propel.twig' with {'pager': notes} %}
