--- a/site/templates/twig/msa/noce/form.twig
+++ b/site/templates/twig/msa/noce/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ input.url() }}" method="post" id="notes-form" data-code="">
+<form action="{{ input.paginateUrl(1) }}" method="POST" id="notes-form" data-code="">
 	<div class="form-group">
 		<label for="code">Code</label>
 		<input type="text" class="form-control w-auto" name="code" id="code" maxlength="{{ qnotes.fieldAttribute('code', 'maxlength') }}" data-id="">
