--- a/site/templates/twig/msa/noce/form.twig
+++ b/site/templates/twig/msa/noce/form.twig
@@ -15,10 +15,10 @@
 		</div>
 	</div>
 	<div class="d-flex justify-content-between align-items-center">
-		<button type="submit" name="action" value="update-notes" class="btn btn-success">
+		<button type="submit" name="action" value="update" class="btn btn-success">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
-		<button type="submit" name="action" value="delete-notes" class="btn btn-danger">
+		<button type="submit" name="action" value="delete" class="btn btn-danger delete_button">
 			<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
 		</button>
 		<button type="button" class="btn btn-warning pull-right" data-dismiss="modal">
