--- a/site/templates/twig/msa/noce/list.twig
+++ b/site/templates/twig/msa/noce/list.twig
@@ -5,6 +5,8 @@
 	qnotes                 Dplus\qnotes\Noce
 	notes                  NotePreDefined[]|ObjectCollection
 #}
+{% set response = qnotes.getResponse() %}
+
 <div class="list-group notes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
